fix wrapping on smaller screens

--- a/src/app/projects/components/card-node.module.css
+++ b/src/app/projects/components/card-node.module.css
@@ -60,7 +60,8 @@
 
 .drawerLinksContainer {
   display: flex;
-  gap: 20px;
+  gap: 12px;
+  flex-wrap: wrap;
 }
 
 .drawerLink {
